# interclub-web

./: .gitignore  .python-version  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  README.md  fight_manager_backend.py  fight_manager_backend.py.bak  fights.db  requirements.txt  sample_fights.csv
admin/: package-lock.json  package.json  tsconfig.app.json
admin/src/: App.css  App.tsx  index.css
admin/src/components/: CancelFightDialog.tsx  EditFightDialog.tsx  EditFightNumberDialog.tsx  FightList.tsx  FightStatus.tsx  ImportFights.tsx
admin/src/context/: FightContext.tsx
admin/src/hooks/: useTranslation.ts
admin/src/services/: api.ts
admin/src/translations/: fr.json
admin/src/utils/: colors.ts  error.ts  fightStatus.ts  time.ts
backend/: .env.deploy.example  .env.example  README.md  fights.db  pyproject.toml  run.py
backend/app/: main.py
backend/app/database/: database.py
backend/app/models/: fight.py  user.py
backend/app/routers/: auth.py  fights.py
backend/app/schemas/: auth.py  fight.py
backend/app/utils/: auth.py  time.py
backend/tests/: conftest.py  test_fights.py
deployment/: generate-nginx-config.sh  interclub-backend.service.template  nginx.conf.template
fight-manager-admin/: package-lock.json  package.json
fight-manager-admin/src/: App.tsx
fight-manager-admin/src/components/: FightList.tsx  FightStatus.tsx  ImportFights.tsx
fight-manager-admin/src/context/: AuthContext.tsx  FightContext.tsx
fight-manager-admin/src/services/: api.ts
fight-manager-admin/src/utils/: colors.ts
fight_manager/: README.md  fights.db  pyproject.toml  test.csv
fight_manager/app/: main.py
fight_manager/app/utils/: auth.py  (+1 more)
fight_manager/models/: fight.py
fight_manager/utils/: config.py
(+11 files in other folders)
